create footer kinjo4回目

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,18 @@
 @charset "UTF-8";
+
+/*-------------------------
+  初期化
+-------------------------*/
+
+a {
+  text-decoration: none;
+}
+
+/*-------------------------
+  グローバル
+-------------------------*/
+footer {
+  color: #333;
+  width: 100%;
+  background-color: #08f;
+}
